[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blog"
dynamic = ["version"]
description = 'My own blog'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Fabrice Brito", email = "fabrice.brito@terradue.com" },
]
classifiers = []
dependencies = []

[project.urls]
Documentation = "https://github.com/fabricebrito/fabricebrito.github.io#readme"
Issues = "https://github.com/fabricebrito/fabricebrito.github.io/issues"
Source = "https://github.com/fabricebrito/fabricebrito.github.io"

[tool.hatch.version]
path = "src/blog/__about__.py"

[tool.hatch.envs.docs]

dependencies = [
  "pdocs",
  "mkdocs-material",
  "mkdocs-jupyter"
]

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve"
deploy = "mkdocs gh-deploy --force"
